# vs.xml

./: .gitignore  CITATION.cff  CMakeLists.txt  Makefile  README.md  RELEASE.md  TODO.md  index.html  meson.build  meson.options
.github/: FUNDING.yml
.github/workflows/: build.yml  docs.yml  release.yml
assets/: pull.sh
benchmark/: meson.build
benchmark/src/: serialize-big.cpp
docs/: architecture.md  benchmarks.md  compatibility.md  configuration.md  embedded.md  faq.md  features.md  formats.md  index.md  layout.md  modes.md  usage.md
docs/examples/: complex-queries.md  index.md  memory-mapping.md  optimization.md  shared-symbols.md  simple-builders.md  simple-loading.md
docs/releases/: v0.2.1.md  v0.2.11.md  v0.2.13.md  v0.2.5.md  v0.2.9.md
docs/specs/: formats.md  queries.md  query-builder.md  tables.md
examples/: README.md  meson.build
examples/src/: annotations.cpp  build-archive.cpp  build-doc.cpp  build-tree.cpp  document-building.cpp  from-xml.cpp  mmap.cpp  queries.cpp  readme.cpp  to-xml.cpp  tree-building.cpp
experiments/: sparse-mmap.2.cpp  sparse-mmap.cpp
include/vs-xml/: archive-builder.hpp  archive.hpp  assert.hpp  builder.hpp  commons.hpp  config.hpp.in  document-builder.hpp  document.hpp  filters.hpp  folder.hpp  format.hpp  impl.hpp  inplace-builder.hpp  meson.build  module.modulemap  node.hpp  parser.hpp  query-builder.hpp  query-new.hpp  query.hpp  serializer.hpp  tree-builder.hpp  tree-iterator.hpp  tree.hpp  vs-xml.hpp  warn-suppress.h  world.hpp  wrp-impl.hpp  wrp-node.hpp  wrp-tree.hpp
include/vs-xml/fwd/: README.md  assert.hpp  format.hpp  print.hpp  unordered_map.hpp  unordered_set.hpp  vector.hpp
include/vs-xml/private/: README.md  assert.hpp  format.hpp  impl.hpp  query-impl.hpp  unordered_set.hpp  visit.hpp  wrp-impl.hpp  wrp-visit.hpp
include/vs-xml/utils/: pretty-header.hpp  rand-access.hpp
latest/docs/: 404.html  index.html  mkdocs.yml
latest/doxygen/: annotated.html  archive-builder_8hpp.html  archive-builder_8hpp__incl.map  archive-builder_8hpp_source.html  archive_8hpp.html  archive_8hpp__dep__incl.map  archive_8hpp__incl.md5  archive_8hpp_source.html  assert_8hpp.html  assert_8hpp__dep__incl.map  assert_8hpp__dep__incl.md5  builder_8hpp.html  builder_8hpp__dep__incl.map  builder_8hpp__dep__incl.md5  builder_8hpp__incl.md5  builder_8hpp_source.html  classVS__XML__NS_1_1Parser.html  classVS__XML__NS_1_1query_1_1generator.html  classVS__XML__NS_1_1serialize_1_1escaped__view_1_1iterator-members.html  classVS__XML__NS_1_1serialize_1_1escaped__view_1_1iterator.html  classVS__XML__NS_1_1serialize_1_1unescaped__view-members.html  classVS__XML__NS_1_1serialize_1_1unescaped__view.html  classVS__XML__NS_1_1serialize_1_1unescaped__view_1_1iterator-members.html  classVS__XML__NS_1_1serialize_1_1unescaped__view_1_1iterator.html  classes.html  commons_8hpp_source.html  conceptVS__XML__NS_1_1ProperBuilder.html  conceptVS__XML__NS_1_1thing__i.html  dir_000001_000000.html  dir_000004_000000.html  dir_000004_000002.html  dir_0626d12dfe76253f12b21f45dcbf4e39.html  dir_0626d12dfe76253f12b21f45dcbf4e39_dep.map  dir_3ac7cb26f1e5e7a740f6732916dd175b.html  dir_3ac7cb26f1e5e7a740f6732916dd175b_dep.map  dir_3ac7cb26f1e5e7a740f6732916dd175b_dep.md5  dir_5c487968aae9e6fc24d4cf51a6b7bf6a.html  dir_5c487968aae9e6fc24d4cf51a6b7bf6a_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_92bce46e4861cd4c4a5090ad214b6b04.html  (+223 more)
lib/: archive.cpp  builder.cpp  document.cpp  node.cpp  parser.cpp  query-builder.cpp  query.cpp  serializer.cpp  tree-builder.cpp  tree.cpp  world.cpp  wrp-node.cpp
lib/private/: impl.cpp  wrp-impl.cpp
next/docs/: 404.html  index.html  mkdocs.yml
next/doxygen/: annotated.html  archive-builder_8hpp.html  archive-builder_8hpp__incl.map  archive-builder_8hpp__incl.md5  archive-builder_8hpp_source.html  archive_8hpp.html  archive_8hpp__dep__incl.md5  archive_8hpp__incl.md5  archive_8hpp_source.html  assert_8hpp.html  assert_8hpp__dep__incl.map  assert_8hpp__dep__incl.md5  assert_8hpp__incl.map  assert_8hpp__incl.md5  assert_8hpp_source.html  builder_8hpp.html  builder_8hpp__dep__incl.map  builder_8hpp__dep__incl.md5  builder_8hpp__incl.map  builder_8hpp__incl.md5  builder_8hpp_source.html  classVS__XML__NS_1_1Parser-members.html  classVS__XML__NS_1_1Parser.html  classVS__XML__NS_1_1query_1_1generator_1_1iterator.html  classVS__XML__NS_1_1serialize_1_1escaped__view.html  classVS__XML__NS_1_1serialize_1_1escaped__view_1_1iterator-members.html  classVS__XML__NS_1_1serialize_1_1escaped__view_1_1iterator.html  classVS__XML__NS_1_1serialize_1_1unescaped__view-members.html  classVS__XML__NS_1_1serialize_1_1unescaped__view_1_1iterator-members.html  classVS__XML__NS_1_1serialize_1_1unescaped__view_1_1iterator.html  classes.html  commons_8hpp_source.html  conceptVS__XML__NS_1_1IStorable.html  conceptVS__XML__NS_1_1ProperBuilder.html  conceptVS__XML__NS_1_1thing__i.html  concepts.html  conceptxml_1_1thing__i.html  dir_000001_000000.html  dir_000002_000000.html  dir_000002_000001.html  (+501 more)
src/: builder.cpp  parser.cpp  serializer.cpp  tree.cpp  wrp-tree.cpp
subprojects/: gtl.wrap  linenoise.wrap  mio.wrap  nanobench.wrap
test/: README.md  base-checks.cpp  meson.build  parse-demo.cpp
test/assets/: demo-0.xml  doc-0.xml
test/src/: base-checks.cpp  binary-format.cpp  escape.cpp  parse-demo.cpp  parse-demo2.cpp  query-builder.cpp  query.cpp  random-access.cpp  tree-builder.cpp  tree-iterator.cpp
utils/: README.md  TODO.md  decode.cpp  encode-archive.cpp  encode.cpp  meson.build  query.cpp
v0.1.11/: index.html
v0.1.11/doxygen/: dir_3ac7cb26f1e5e7a740f6732916dd175b.html  dir_3ac7cb26f1e5e7a740f6732916dd175b_dep.md5  document_8hpp_source.html  files.html  functions.html  functions_func.html  serializer_8hpp.html  serializer_8hpp_source.html  structVS__XML__NS_1_1DocumentRaw__coll__graph.md5  structVS__XML__NS_1_1Tree.html  structVS__XML__NS_1_1TreeBuilder__inherit__graph.map  structVS__XML__NS_1_1attr__t-members.html  structVS__XML__NS_1_1base__t-members.html  structVS__XML__NS_1_1base__t.html  (+24 more)
v0.2.7/: index.html
(+871 files in other folders)
