mio_dep = dependency('mio')

executable(
    'tree-building',
    './src/tree-building.cpp',
    install: false,
    dependencies: [
        vs_xml_dep
    ],
)

executable(
    'document-building',
    './src/document-building.cpp',
    install: false,
    dependencies: [
        vs_xml_dep
    ],
)

executable(
    'from-xml',
    './src/from-xml.cpp',
    install: false,
    dependencies: [
        vs_xml_dep
    ],
)

executable(
    'to-xml',
    './src/to-xml.cpp',
    install: false,
    dependencies: [
        vs_xml_dep
    ],
)

executable(
    'mmap',
    './src/mmap.cpp',
    install: false,
    dependencies: [
        vs_xml_dep
    ],
)