mio_dep = dependency('mio')

executable(
    'readme',
    './src/readme.cpp',
    install: false,
    dependencies: [
        vs_xml_dep
    ],
)

executable(
    'tree-building',
    './src/build-tree.cpp',
    install: false,
    dependencies: [
        vs_xml_dep
    ],
)

executable(
    'document-building',
    './src/build-doc.cpp',
    install: false,
    dependencies: [
        vs_xml_dep
    ],
)

executable(
    'from-xml',
    './src/from-xml.cpp',
    install: false,
    dependencies: [
        vs_xml_dep
    ],
)

executable(
    'to-xml',
    './src/to-xml.cpp',
    install: false,
    dependencies: [
        vs_xml_dep
    ],
)

executable(
    'mmap',
    './src/mmap.cpp',
    install: false,
    dependencies: [
        vs_xml_dep
    ],
)